<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">Welcome to Hangman!</string>
    <string name="play_button">New Game</string>
    <string name="rules_button">Rules</string>
    <string name="change_language_button">Norwegian</string>
    <string name="quit_button">Quit</string>
    <string name="hangman_picture_desc">picture of a hanged man</string>
    <string name="next_button">Next</string>
    <string name="placeholder">Placeholder</string>
    <string name="close_activity">Quit game</string>
    <string name="are_you_sure">Are you sure you would like to quit the game? Your score will be lost!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="guessed_correct_message">Correct! New word!</string>
    <string name="guessed_wrong_message">Whoops! The word was: </string>
    <string name="beat_the_game_title">I am out of words! The word was: </string>
    <string name="you_beat_the_game_message">You reached the end of the road! Play again?</string>
    <string name="play_again_message">! Play again?</string>
    <string name="hangman_picture_container_desc">This picture shows how hanged the man is</string>
    <string name="help_button_desc">This icon is pressable and shows the rules</string>
    <string name="win_score_symbol_desc">This is a happy smiley indicating current amount of words that are guessed correctly</string>
    <string name="win_score_counter_desc">This number indicated number of wins total</string>
    <string name="lost_score_symbol_desc">This is a sad smiley indicating current amount of words guessed incorrectly</string>
    <string name="lost_score_counter_desc">This is the number indicating amount of losses</string>
    <string name="quit_button_desc">This is an icon used for exiting the game</string>
    <string name="rules_dialog_title">The rules for hangman</string>
    <string name="rules_dialog_line1">You guess letters until you\'ve figured out the word. If you guess </string>
    <string name="rules_dialog_line2"> wrong letters, the man is hanged and the round is over. There\'s a total of </string>
    <string name="rules_dialog_line3"> words in this game and the score is shown at the top of the screen.</string>
    <string name="thank_you_reply">Thank you!</string>
</resources>