<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_column_container"
        android:layout_alignEnd="@+id/button_column_container"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button_column_container"
        android:contentDescription="@string/hangman_picture_desc"
        android:cropToPadding="false"
        android:src="@drawable/hangman_game_over" />

    <LinearLayout
        android:id="@+id/button_column_container"
        android:layout_width="@dimen/main_activity_button_horizontal_size"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quit_button"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="34dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_vertical_size"
            android:layout_margin="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/change_language_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_vertical_size"
            android:layout_margin="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/change_language_button" />

        <Button
            android:id="@+id/rules_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_button_vertical_size"
            android:layout_margin="5dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/rules_button" />
    </LinearLayout>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="130dp"
        android:layout_height="@dimen/main_activity_button_vertical_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedbutton"
        android:text="@string/quit_button" />

</RelativeLayout>
